-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: xo-server
version: 1.0.0.2
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
bug-reports: mailto:marlowsd@gmail.com
stability: stable
homepage: http://www.haskell.org/hello/
synopsis: Hello World, an example package
category: Console, Text
cabal-version: >= 1.6
build-type: Simple

Description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

executable xo-server
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >= 4.2 && < 5,
    random >= 1.0.1.1,
    directory >= 1.2.1.0,
    base64-bytestring >= 1.0.0.1,
    containers >= 0.5.5.1,
    directory >= 1.2.1.0,
    binary >= 0.7.1.0,
    conduit >= 1.2.4.2,
    stm-conduit >= 2.6.0,
    conduit-extra >= 1.1.7.3,
    http-conduit >= 2.1.5,
    resourcet >= 1.1.4.1,
    binary-conduit >= 1.2.3,
    twitter-conduit >= 0.1.0,
    twitter-types >= 0.7.0,
    transformers >= 0.3.0.0,
    data-default >= 0.5.3,
    string-conversions >= 0.3.0.3,
    authenticate-oauth >= 1.5.1.1,
    bytestring >= 0.10.4.0,
    split >= 0.2.2,
    blaze-markup >= 0.7.0.2,
    blaze-svg >= 0.3.4.1,
    cairo >= 0.13.1.0,
    svgcairo >= 0.13.0.3,
    JuicyPixels >= 3.2.4,
    curl >= 1.3.8,
    download-curl >= 0.1.4


  ghc-options: -O0 -rtsopts=all -prof -auto-all
